--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,12 @@
     <color name="colorAccent">#03DAC5</color>
 
     <!-- Colors -->
+    <color name="white">#ffffff</color>
+
     <color name="grey">#e9ecef</color>
     <color name="grey2">#868e96</color>
     <color name="grey3">#3e4044</color>
 
-    <color name="white">#ffffff</color>
+    <color name="blue">#3fd2d1</color>
 
 </resources>
